[build-system]
requires = [
    "setuptools>=61",
]
build-backend = "setuptools.build_meta"

[project]
name = "nbclick"
version = "1.0.0"
description = "Modify and run Jupyter notebooks from the command line"
readme = "README.md"
maintainers = [
    { name = "Dominic Kempf", email = "ssc@iwr.uni-heidelberg.de" },
]
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "Click >=8.0",
    "ipykernel",
    "nbclient >=0.5",
    "nbformat >=5.1",
    "nbparameterise >=0.5",
]

[project.scripts]
nbclick = "nbclick.__main__:main"

[project.optional-dependencies]
tests = [
    "pytest",
]

[tool.setuptools]
packages = [
    "nbclick",
]
