[metadata]
name = nbclick
version = attr: nbclick.__version__
description = Modify and run Jupyter notebooks from the command line
long_description = file: README.md
long_description_content_type = text/markdown
author = Dominic Kempf
author_email = ssc@iwr.uni-heidelberg.de
license = MIT License
license_file = LICENSE.md
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    Click>=8.0
    ipykernel
    markupsafe==2.0.1 # This one is only here temporarily because Jinja2 created a mess
    nbclient>=0.5
    nbformat>=5.1
    nbparameterise>=0.5

[options.entry_points]
console_scripts =
    nbclick = nbclick.__main__:main
